--- a/css/base.css
+++ b/css/base.css
@@ -12,8 +12,9 @@ html {
 
 
 body {
-  background: white;
-  background: linear-gradient(135deg, #36BA98 0%, #36BA98 10%, #E9C46A 30%, #F4A261 50%, #E76F51 70%, #36BA98 90%, #36BA98 100%);
+  color: #3b1f47;
+  text-shadow: 0 1px 2px rgba(255,255,255,0.3);
+  background: linear-gradient(135deg, #36ba98 0%, #36BA98 10%, #E9C46A 30%, #F4A261 50%, #E76F51 70%, #36BA98 90%, #36BA98 100%);
   font-family: 'Inter', sans-serif;
   font-weight: 400;
   font-style: normal;
@@ -30,12 +31,16 @@ body.dark-mode {
     #1a3c34 90%,
     #1a3c34 100%
   );
+  color: white;
+}
+
+body.dark-mode .calendar {
+  color: white;
 }
 
 
-
 h1 {
-    color: white;
+
 
     text-align: center;
     font-size: 70px;  
@@ -48,7 +53,7 @@ h1 {
 }
 
 h2 {
-    color: white;
+
     display: flex;
     justify-content: center;
     text-align: center;
