--- a/css/components.css
+++ b/css/components.css
@@ -103,12 +103,6 @@ Reusable UI elements (navbar,etc.)
   flex-shrink: 0;
 }
 
-.dark-mode {
-  background-color: #121212;
-  color: #f0f0f0;
-}
-
-
 .nav-left {
   width: 100px; /* same width as button, roughly */
 }
